--- a/fetch_data_exploration.ipynb
+++ b/fetch_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "51b85600",
+   "id": "34ecc3ca",
    "metadata": {},
    "source": [
     "### Importing the essential libraries"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd733e7f",
+   "id": "c415d1c1",
    "metadata": {},
    "source": [
     "### Extracting and loading data from zip files."
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1df59605",
+   "id": "bdf40726",
    "metadata": {},
    "source": [
     "### Exploring Brands dataset"
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ae58a39d",
+   "id": "8e6cbc02",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5aa67b2",
+   "id": "8c5a235b",
    "metadata": {},
    "source": [
     "From the info, we can infer that the dimensional data has missing values. Let us investigate further to find out the proportion of missing values in the data set."
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "eb1162fd",
+   "id": "2840dfbc",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941757bf",
+   "id": "d50c54a3",
    "metadata": {},
    "source": [
     "`CategoryCode` and `Topbrand` columns seems to have higher missing values with proportion of 56% and 52% respecitvely"
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b351c6cd",
+   "id": "0aca3969",
    "metadata": {},
    "source": [
     "#### Summary statistics of Brands dataset"
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b7dfdb9",
+   "id": "3a7ea8b5",
    "metadata": {},
    "source": [
     "While `CategoryCode` has 14 unique values and `category` has 23 unique values, let's find out the levels in each columns"
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa61347",
+   "id": "f183a14d",
    "metadata": {},
    "source": [
     "As we know there are 14 unique category codes mapped to corresponding category, there are transactions present for 14 category of items. Hence we need to find out the categories with missing category code"
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d522d1",
+   "id": "e7943458",
    "metadata": {},
    "source": [
     "Here we can see that few category products either should be mapped to related categorycode for example, 'beauty' and 'beauty_and_personal' categories can be mapped to 'PERSONAL_CARE' or categorycode should be updated with missing category with same format as follows. "
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c25b301f",
+   "id": "6fe92742",
    "metadata": {},
    "source": [
     "***Data Quality Issues in Brand Dataset:***\n",
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf5817b",
+   "id": "cf8769cd",
    "metadata": {},
    "source": [
     "### Exploring Users dataset"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4ae4f98d",
+   "id": "700134bc",
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0de67a1",
+   "id": "4f016c01",
    "metadata": {},
    "source": [
     "There are high missing values in `lastlogin` and `state` columns. `CreatedDate` and 'lastlogin' columns are in incorrect data type. "
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67b011d2",
+   "id": "276f9d08",
    "metadata": {},
    "source": [
     "#### Summary Statistics of Users data"
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "abae6bb0",
+   "id": "f99f27e5",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f722ab",
+   "id": "ba83b9a9",
    "metadata": {},
    "source": [
     "From summary statistics, we can infer:\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e41320d",
+   "id": "55831274",
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4218f4c0",
+   "id": "57c52df4",
    "metadata": {},
    "source": [
     "Characteristics of data has remained same. Lets explore the number of users across each state and signupsource"
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f0e4cba3",
+   "id": "977b37f7",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47eed49c",
+   "id": "7cadff30",
    "metadata": {},
    "source": [
     "***Data Quality Issues in User Dataset:***\n",
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "259cc0f4",
+   "id": "c214718c",
    "metadata": {},
    "source": [
     "### Exploring Receipt Dataset"
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9bbf2e98",
+   "id": "1f768b54",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58bbe05c",
+   "id": "7427d8e5",
    "metadata": {},
    "source": [
     "From the data description, we can found that there are 1119 unique user data. Hence there are no duplicate records."
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "56bab203",
+   "id": "97604113",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa575c8",
+   "id": "81cc80a1",
    "metadata": {},
    "source": [
     "By inspecting the data, column `rewardsReceiptItemLis` list of dict data type. Hence we should convert the dict values to dataframe."
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f3459716",
+   "id": "7fdb381c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,7 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ab4d190f",
+   "id": "68f9438d",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d481257b",
+   "id": "0ff70b48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dacd470",
+   "id": "b00a15ba",
    "metadata": {},
    "source": [
     "#### Summary Statistics"
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b9ef986b",
+   "id": "007ad3dc",
    "metadata": {},
    "outputs": [
     {
@@ -1065,18 +1065,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67ac105e",
+   "id": "78d2616f",
    "metadata": {},
    "source": [
     "***Data Quality Issues:*** Upon exploring the dataset, the data quality issues addressed are,\n",
     "- parsed nested json values to tabular format and concatenated to original dataset\n",
-    "- changed the incorrect data types of the columns to appropriate data types."
+    "- changed the incorrect data types of the columns to appropriate data types. ASsuming missing values are valid for those have total spend is 0 which implies no transcation made"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "632788e9",
+   "id": "068971f5",
    "metadata": {},
    "outputs": [],
    "source": []
